Revision history for Test::PDL

{{$NEXT}}

 - added a function eq_pdl() to compare two piddles, without performing an
   actual test. If you've been wanting to compare two piddles outside of a test
   suite, now you can (Edward Baudrez)
 - added a function eq_pdl_diag() that, in addition to comparing two piddles,
   also returns the reason for failure, if any. It was written to support deep
   comparisons with Test::Deep, but you may find other uses for it, too (Edward
   Baudrez)

0.03      2012-09-10

 - minor bugfixes related to distribution building and hosting on GitHub. No
   functionality added or changed (Edward Baudrez)
 - fix the POD documentation to work with the PDL docs database scraper (David
   Mertens)
 - allow setting module options at use time:
      use Test::PDL -option => $value;
   Only options that would be accepted by Test::PDL::set_options() are allowed.
   Note that you must use the lowercased option name, preceded by a dash, when
   setting options this way. (Edward Baudrez)
 - require type equality by default when comparing piddles. If you don't like
   this behaviour, set the option EQUAL_TYPES to false, or use Test::PDL as
   follows:
      use Test::PDL -equal_types => 0;
   (Edward Baudrez)

0.02      2012-09-07

 - initial version (Edward Baudrez, with feedback and improvements from Joel
   Berger, Chris Marshall, and David Mertens)