@@ -9,8 +9,8 @@ version 0.04
 =head1 SYNOPSIS
 
 	use PDL;
-	use Test::More tests => 2;
-	use Test::PDL;
+	use Test::More tests => 3;
+	use Test::PDL qw( is_pdl :deep );
 
 	# an example of a test that succeeds
 	$got      = sequence 5;
@@ -33,6 +33,21 @@ version 0.04
 	#          got: Double   D [5]        (P    ) [0 -1 -2 3 4]
 	#     expected: Double   D [5]        (P    ) [0 1 2 3 4]
 
+	# piddles within other data structures can be tested with Test::Deep
+	use Test::Deep qw( cmp_deeply );
+	$got      = { name => 'Histogram', data => long( 17,0,1 ) };
+	$expected = { name => 'Histogram', data => test_long( 17,0,0,1 ) };
+	cmp_deeply( $got, $expected, 'demonstrate the output of a failing deep comparison' );
+	#   OUTPUT:
+	# not ok 3 - demonstrate the output of a failing deep comparison
+	#
+	#   Failed test 'demonstrate the output of a failing deep comparison'
+	#   at aux/pod.t line 30.
+	# Comparing $data->{"data"} as a piddle:
+	# dimensions do not match in extent
+	#    got : Long     D [3]        (P    ) [17 0 1]
+	# expect : Long     D [4]        (P    ) [17 0 0 1]
+
 =head1 DESCRIPTION
 
 With Test::PDL, you can compare two piddles for equality. The comparison is
@@ -41,8 +56,8 @@ patterns, and finally the values themselves. The exact behaviour can be
 configured by setting certain options (see set_options() and %OPTIONS below).
 Test::PDL is mostly useful in test scripts.
 
-By default, Test::PDL exports only one function: is_pdl(). The functions
-eq_pdl() and eq_pdl_diag() are exported on demand only.
+By default, Test::PDL exports only one function: is_pdl(). The other functions
+are exported on demand only.
 
 =head1 VARIABLES
 
@@ -211,6 +226,65 @@ succeeds. Does not need L<Test::Builder>, so you can use it as part of
 something else, without side effects (like generating output). It was written
 to support deep comparisons with L<Test::Deep>.
 
+=head2 test_pdl
+
+=for ref # PDL
+
+Special comparison to be used in conjunction with L<Test::Deep> to test piddles
+inside data structures.
+
+=for usage # PDL
+
+	my $expected = { ..., some_field => test_pdl( 1,2,-7 ), ... };
+	my $expected = [ ..., test_short( 1,2,-7 ), ... ];
+
+Suppose you want to compare data structures that happen to contain piddles. You
+use is_deeply() (from L<Test::More>) or cmp_deeply() (from L<Test::Deep>) to
+compare the structures element by element. Unfortunately, you cannot just write
+
+	my $got = my_sub( ... );
+	my $expected = {
+		...,
+		some_field => pdl( ... ),
+		...
+	};
+	is_deeply $got, $expected;
+
+Neither does cmp_deeply() work in the same situation. is_deeply() tries to
+compare the piddles using the (overloaded) C<==> comparison operator, which
+doesn't work. It simply dies with an error message saying that multidimensional
+piddles cannot be compared, whereas cmp_deeply() performs only a shallow
+comparison of the references.
+
+What you need is a special comparison, which is provided by this function, to
+be used with cmp_deeply(). You need to rewrite $expected as follows
+
+	my $expected = {
+		...,
+		some_field => test_pdl( ... ),
+		...
+	};
+	cmp_deeply $got, $expected;
+
+Note that you need to write test_pdl() instead of pdl(). You could achieve the
+same thing with
+
+	my $expected = {
+		...,
+		some_field => code( sub { eq_pdl_diag( shift, pdl( ... ) ) } ),
+		...
+	};
+
+but the diagnostics provided by test_pdl() are better, and it's easier to use.
+test_pdl() accepts the same arguments as the PDL constructor pdl() does. If you
+need to compare a piddle with a type different from the default type, use one
+of the provided test_byte(), test_short(), test_long(), etc.:
+
+	my $expected = { data => test_short( -4,-9,13 ) };
+
+=for Pod::Coverage test_byte test_short test_ushort test_long test_longlong
+test_float test_double
+
 =head2 set_options
 
 =for ref # PDL
@@ -237,7 +311,7 @@ None reported so far.
 
 =head1 SEE ALSO
 
-L<PDL>, L<Test::More>, L<Test::PDL::Deep>
+L<PDL>, L<Test::More>, L<Test::Deep>, L<Test::PDL::Deep>
 
 =head1 ACKNOWLEDGMENTS
 
